--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,3 @@
-#index:
- #   path: /
-#    controller: App\Controller\QuestionController::homepage
+#ffers:
+ #  path: /offers
+ #   controller: App\Controller\OffersController::offers
